@@ -3,10 +3,14 @@
 \alias{Between}
 \alias{between}
 \alias{Within}
+\alias{lag}
+\alias{lead}
+\alias{diff}
 \alias{Between.pseries}
 \alias{between.pseries}
 \alias{Within.pseries}
 \alias{lag.pseries}
+\alias{lead.pseries}
 \alias{diff.pseries}
 \alias{summary.pseries}
 \alias{print.summary.pseries}
@@ -23,6 +27,7 @@ between(x, ...)
 Between(x, ...)
 Within(x, ...)
 \method{lag}{pseries}(x, k = 1, ...)
+\method{lead}{pseries}(x, k = 1, ...)
 \method{diff}{pseries}(x, lag = 1, ...)
 \method{as.matrix}{pseries}(x, idbyrow = TRUE, ...)
 \method{between}{pseries}(x, effect = c("individual", "time"), ...)
@@ -34,20 +39,27 @@ Within(x, ...)
 
 \arguments{
  \item{x, object}{a \code{pseries} or a \code{summary.pseries} object,}
- \item{effect}{the (individual or time) effect,}
- \item{k, lag}{the number of lags for the \code{lag} and \code{diff}
-  methods,}
- \item{idbyrow}{if TRUE, the lines of the matrix are the individuals,}
+ \item{effect}{character indicating the \code{individual} or \code{time} effect,}
+ \item{k}{the number of lags for the \code{lag} and \code{lead} methods (can also be negative).
+          For the \code{lag} method, a positive (negative) \code{k} gives lagged (leading) values.
+          For the \code{lead} method, a positive (negative) \code{k} gives leading (lagged) values,
+          thus, \code{lag(x, k = -1)} yields the same as \code{lead(x, k = 1)}.
+          If \code{k} is a vector (\code{k = c(k1,k2, ...)}) a \code{matrix} with multiple lagged \code{pseries} is returned,}
+ \item{lag}{the number of lags for the \code{diff} method (only non-negative values for \code{lag}),}
+ \item{idbyrow}{if \code{TRUE} in the \code{as.matrix} method, the lines of the matrix are the individuals,}
  \item{\dots}{further arguments.}
 }
 
 \value{
-All these functions return an object of class \code{pseries}, except \code{between} which is a numeric vector.
+All these functions return an object of class \code{pseries}, except:\cr
+\code{between}, which returns a numeric vector,\cr
+\code{as.matrix}, which returns a matrix, and\cr
+\code{lag} (thus also \code{lead}), which returns a matrix if called with more than one lag (lead), i. e. \code{length(k) > 1}.
 }
 
 \details{
 A \code{pseries} is obtained when a series is extracted from a
-\code{pdata.frame} object. It consists on the original series with the \code{index} attribute of the \code{pdata.frame}. Specific transformations (within and between) are available and special \code{lag} and \code{diff} methods are provided.
+\code{pdata.frame} object. It consists of the original series with the \code{index} attribute of the \code{pdata.frame}. Specific transformations (\code{within} and \code{between}) are available and special \code{lag}, \code{lead} and \code{diff} methods are provided.
 }
 
 % \references{
@@ -57,25 +69,37 @@ A \code{pseries} is obtained when a series is extracted from a
 % }
 
 \examples{
-# Create first a pdata.frame
-data("EmplUK", package = "plm")
-Em <- pdata.frame(EmplUK)
-# Then extract a serie, which becomes a pseries
-z <- Em$output
-class(z)
+# First, create a pdata.frame
+ data("EmplUK", package = "plm")
+ Em <- pdata.frame(EmplUK)
+# Then extract a series, which becomes additionally a pseries
+ z <- Em$output
+ class(z)
+
 # obtain the matrix representation
-as.matrix(z)
-# compute the between, within transformation
-between(z)
-Within(z)
-# Between replicate the values for each time observations
-Between(z)
-# compute the first and third lag, and the difference laged twice
-lag(z)
-lag(z, 3)
-diff(z, 2)
+ as.matrix(z)
+
+# compute the between and within transformations
+ between(z)
+ Within(z)
+
+# Between replicates the values for each time observations
+ Between(z)
+
+# compute the first and third lag, and the difference lagged twice
+ lag(z)
+ lag(z, 3)
+ diff(z, 2)
+
+# compute negative lags (= leading values)
+ lag(z, -1)
+ lead(z, 1) # same as line above
+ identical(lead(z, 1), lag(z, -1)) # TRUE
+ 
+# compute more than one lag at once
+ lag(z, c(1,2))
 }
 
-\author{Yves Croissant}
+\author{Yves Croissant (main implementations), Kevin Tappe (extended to negative lags)}
 
 \keyword{classes}
